fix overflow

--- a/styles.css
+++ b/styles.css
@@ -99,7 +99,7 @@ button {
     flex-direction: column;
     gap: 3em;
     flex: 1;
-    min-width: 100vw;
+    max-width: 100vw;
 }
 
 .board-div {
